# TOTP-Tool

./: README.md
TOTP_Tool/: README.md  pyproject.toml
TOTP_Tool/src/TOTP_Tool/: totp_cli.py  totp_gui.py
