[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "TOTP-Tool"
version = "0.0.1"
authors = [
  { name="Alec DiAstra", email="alecdiastra@gmail.com" },
]
description = "A Simple TOTL tool for creating and using virtual tokens "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
